# KITrain

./: .gitignore  LICENSE  README.md  gitignore
driving_decision_maker/clearance_profile_observer/: CMakeLists.txt
driving_decision_maker/target_distance_estimator/: CMakeLists.txt
driving_route_unlocker/signal_detector/: package.xml
install/: local_setup.sh  setup.sh
log/: latest_build
object_localizer/lidar_detector/: package.xml
object_localizer/lidar_detector/clustering/: CMakeLists.txt  package.xml
object_localizer/lidar_detector/roi_fiter/: CMakeLists.txt
object_localizer/lidar_detector/test_dev_env/: CMakeLists.txt
object_localizer/lidar_detector/test_dev_env/src/: lidar_template.cpp
object_localizer/lidar_detector/voxel_filter/: CMakeLists.txt
object_localizer/object_fuser/: CMakeLists.txt  package.xml
positioner/track_detector/: CMakeLists.txt  package.xml
sensors/gnss/: CMakeLists.txt
sensors/gnss/src/: gnss_udp_to_topic.cpp
sensors/lidar/: CMakeLists.txt  package.xml
sensors/lidar/src/: lidar_udp_receiver.cpp  lidar_udp_receiver.h  lidar_udp_to_topic.cpp
sensors/rgb_camera/: CMakeLists.txt  package.xml
sensors/rgb_camera/launch/: execute.launch.py
sensors/rgb_camera/src/: rgb_camera_receiver_main.cpp
sensors/rgb_camera/src/install/camera_simulator/share/camera_simulator/: package.bash  package.dsv  package.ps1  package.xml
src/driving_decision_maker/clearance_profile_observer/: CMakeLists.txt  package.xml
src/driving_decision_maker/target_distance_estimator/: CMakeLists.txt  package.xml
src/driving_decision_maker/target_velocity_estimator/: CMakeLists.txt  package.xml
src/driving_route_unlocker/signal_detection_verificator/: CMakeLists.txt  package.xml
src/driving_route_unlocker/signal_detector/: CMakeLists.txt  package.xml
src/lidar_msgs/: CMakeLists.txt
src/lidar_msgs/msg/: GroundTruth.msg
src/messages/lidar_msgs/: CMakeLists.txt
src/messages/observer_msgs/: CMakeLists.txt  package.xml
src/messages/observer_msgs/msg/: ObserverInfo.msg
src/nodes/driving_decision_maker/actor/: CMakeLists.txt  package.xml
src/nodes/driving_decision_maker/actor/src/: actor.cpp
src/nodes/driving_decision_maker/clearance_profile_observer/: CMakeLists.txt  package.xml
src/nodes/driving_decision_maker/clearance_profile_observer/src/: clearance_profile_observer.cpp
src/nodes/object_localizer/lidar_detector/clustering/: CMakeLists.txt
src/nodes/object_localizer/lidar_detector/clustering/src/: pc_clustering.cpp
src/nodes/object_localizer/lidar_detector/roi_fiter/: CMakeLists.txt  package.xml
src/nodes/object_localizer/lidar_detector/roi_fiter/src/: LineNode.h  ROIFilter.h  roi_filter.cpp
src/nodes/offline_map/: CMakeLists.txt  package.xml
src/nodes/offline_map/src/: map.cpp
src/nodes/order_definer/: CMakeLists.txt  package.xml
src/nodes/order_definer/src/: receive_order.cpp
src/nodes/positioner/clearance_profile_setter/: CMakeLists.txt  package.xml
src/nodes/positioner/clearance_profile_setter/src/: clearance_profile_setter.cpp
src/nodes/positioner/localizer/: CMakeLists.txt  package.xml
src/nodes/positioner/localizer/src/: localizer.cpp
src/nodes/positioner/longitudinal_position_corrector/: CMakeLists.txt  package.xml
src/nodes/positioner/longitudinal_position_corrector/src/: longitudinal_positioner.cpp
src/nodes/positioner/position_corrector/: CMakeLists.txt  package.xml
src/nodes/positioner/position_corrector/src/: positioner.cpp
src/nodes/positioner/projector/: CMakeLists.txt  package.xml
src/nodes/positioner/projector/src/: projector.cpp
src/nodes/positioner/track_detector/: CMakeLists.txt  package.xml
src/nodes/positioner/track_detector/src/: track_detect.cpp
src/nodes/positioner/track_setter/: CMakeLists.txt  package.xml
src/nodes/positioner/track_setter/src/: track_setter.cpp
src/nodes/sensors/odometry/: CMakeLists.txt  package.xml
src/nodes/sensors/odometry/src/: odometry_receiver.cpp
src/nodes/sensors/rgb_camera/: CMakeLists.txt  package.xml
src/nodes/sensors/rgb_camera/include/sensors/rgb_camera/: rgb_camera_receiver.hpp
src/nodes/sensors/rgb_camera/launch/: execute.launch.py
src/nodes/sensors/rgb_camera/src/: rgb_camera_receiver_main.cpp
src/nodes/sensors/rgb_camera/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/nodes/sensors/rgb_camera/src/install/camera_simulator/lib/camera_simulator/: camera_simulator
src/nodes/sensors/rgb_camera/src/install/camera_simulator/share/camera_simulator/: package.sh  package.zsh
src/nodes/yard_describer/: CMakeLists.txt  package.xml
src/nodes/yard_describer/src/: map_main.cpp
src/nodes/yard_describer/src/MapData/: FS_101.csv  FS_102.csv  FS_105.csv  FS_106.csv  FS_107.csv  FS_108.csv  FS_109.csv  FS_110.csv  FS_112.csv  FS_113.csv  FS_115.csv  FS_116.csv  FS_117.csv  FS_118.csv  notrack_117.csv  track_101.csv  track_102.csv  track_105.csv  track_106.csv  track_107.csv  track_108.csv  track_109.csv  track_110.csv  track_112.csv  track_113.csv  track_115.csv  track_116.csv  track_117.csv  track_118.csv
src/object_localizer/lidar_detector/: CMakeLists.txt  package.xml
src/object_localizer/object_fuser/: CMakeLists.txt  package.xml
src/object_localizer/rgb_detector/: CMakeLists.txt  package.xml
src/positioner/clearance_profile_setter/: CMakeLists.txt  package.xml
src/positioner/localizer/: CMakeLists.txt  package.xml
src/positioner/position_corrector/: CMakeLists.txt  package.xml
src/positioner/track_detector/: CMakeLists.txt  package.xml
src/sensors/gnss/: CMakeLists.txt  package.xml
src/sensors/lidar/: CMakeLists.txt  package.xml
src/sensors/odometry/: CMakeLists.txt  package.xml
src/sensors/rgb_camera/: CMakeLists.txt  (+1 more)
src/transformation_tree/dynamic_transform_broadcaster/: CMakeLists.txt  package.xml
src/transformation_tree/dynamic_transform_broadcaster/src/: dynamic_transform_broadcaster.cpp
src/transformation_tree/static_transform_broadcaster/: CMakeLists.txt  package.xml
src/transformation_tree/static_transform_broadcaster/src/: static_transform_broadcaster.cpp
(+315 files in other folders)
