<?xml version="1.0"?>
<package format="2">
  <name>dynamic_transform_broadcaster</name>
  <version>0.0.0</version>
  <description>A dynamic transform broadcaster node for ROS 2.</description>
  <maintainer email="user@example.com">Your Name</maintainer>
  <license>BSD-3-Clause</license>

 <buildtool_depend>ament_cmake</buildtool_depend>
 
  <depend>rclcpp</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package> 
