<?xml version="1.0"?>
<package format="3">
  <name>clearance_profile_observer</name>
  <version>0.1.0</version>
  <description>The clearance_profile_observer package</description>
  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>visualization_msgs</depend>
  <depend>std_msgs</depend>
  <depend>lidar_msgs</depend> 
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <build_depend>ament_cmake</build_depend>
  <exec_depend>ament_cmake</exec_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
