<?xml version="1.0"?>
<package format="3">
  <name>clearance_profile_observer</name>
  <version>0.0.1</version>
  <description>A ROS 2 package for observing clearance profiles.</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>visualization_msgs</depend>
     <depend>lidar_msgs</depend>
     <depend>observer_msgs</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
